--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<link rel="stylesheet" type="text/css" href="css/webflow.css">
 		<link rel="stylesheet" type="text/css" href="css/whitestripes.webflow.css">
 		<link rel="icon" type="image/x-icon" href="https://y7v4p6k4.ssl.hwcdn.net/placeholder/favicon.ico">
+		<link href='http://fonts.googleapis.com/css?family=Scada:400italic,700italic,400,700&subset=latin,cyrillic,latin-ext' rel='stylesheet' type='text/css'>
 		<script type="text/javascript" src="js/webflow.js" defer></script>
+
 	</head><body>
 	<div class="w-container content">
 		<div class="up">
@@ -27,7 +29,7 @@
 			<div class="w-clearfix presentation">
 				<div class="action">
 					<h2>Акция!</h2>
-					<h3 class="action-head"> Crest 3D Intensive <br>Professional Effects<br><strong>-30%</strong></h3>
+					<h3 class="action-head"> Crest 3D Intensive <br>Professional Effects<strong>-30%</strong></h3>
 					<div class="actions">
 						<div class="action-text">старая цена <span class="old-price">2000</span>
 							<p class="new-price">новая цена 1500</p></div>
@@ -39,9 +41,9 @@
 			<div class="w-row bonuses">
 				<div class="w-col w-col-4 w-clearfix">
 					<img class="bonus-face" src="images/guarantee.png" width="75" alt="phone%20rebel.jpg">
-					<div class="guarantee">Мы гарантируем результат
-						<br>или
-						<br>мы вернем вам деньги!</div>
+					<div class="guarantee">Мы гарантируем, что Ваши зубы 
+						станут белее на 4-6 тонов или
+						мы вернем вам деньги!</div>
 				</div>
 				<div class="w-col w-col-4 w-clearfix">
 					<img class="bonus-face" src="images/sertif.png" width="75" height="75" alt="sertif.png">
@@ -113,9 +115,9 @@
 			</div>
 		</div>
 		<a class="button catalog-button" href="#">
-			Хочу улыбку!</a>
+			Хочу белоснежную улыбку!</a>
 		<div class="fears w-clearfix">
-			<h3>Топ главных страхов при отбеливании зубов</h3>
+			<h3>Пять главных страхов при отбеливании зубов</h3>
 			<div class="problem">
 				<div>- Это очень дорого!</div>
 			</div>
@@ -171,14 +173,17 @@
 			<div class="w-row">
 				<div class="w-col w-col-4 good">
 					<div class="card">
-						<h4>Отбеливающие полоски №1</h4>
-						<img class="goods-face" src="images/3.jpg" height="150" alt="3.jpg">
+						<h4>Crest 3D Intensive</br>
+						Professional Effects</h4>
+						<h5>Цена: 3250 руб.</h5>
+						<img class="goods-face" src="images/7FJ2EWwny6s.jpg" height="150" alt="3.jpg">
 						<div class="w-embed">
 							<ul>
-								<li>описание товара 1</li>
-								<li>описание товара 2</li>
-								<li>описание товара 3</li>
-								<li>описание товара 4</li>
+								<li>длительность курса 7 дней</li>
+								<li>результаты заметны после первого применения</li>
+								<li>отбеливание на 5-6 тонов</li>
+								<li>эффект отбеливания сохраняется от 12 до 18 месяцев</li>
+								<li>время использования: 2 часа, 1 раз в день</li>
 							</ul>
 						</div>
 						<a class="button" href="#">
@@ -187,14 +192,17 @@
 				</div>
 				<div class="w-col w-col-4 good">
 					<div class="card">
-						<h4>Отбеливающие полоски №2</h4>
-						<img class="goods-face" src="images/2.jpg" height="150" alt="2.jpg">
+						<h4>Crest 3D</br>
+						 Advanced Vivid</h4>
+						<h5>Цена: 2890 руб.</h5>
+						<img class="goods-face" src="images/3.jpg" height="150" alt="2.jpg">
 						<div class="w-embed">
 							<ul>
-								<li>описание товара 1</li>
-								<li>описание товара 2</li>
-								<li>описание товара 3</li>
-								<li>описание товара 4</li>
+								<li>длительность курса 14 дней</li>
+								<li>результаты заметны через 3-4 дня</li>
+								<li>отбеливание на 3-4 тона</li>
+								<li>эффект отбеливания сохраняется на 12 месяцев</li>
+								<li>время использования: 30 минут, 1 раз в день</li>
 							</ul>
 						</div>
 						<a class="button" href="#">
@@ -203,14 +211,17 @@
 				</div>
 				<div class="w-col w-col-4 good">
 					<div class="card">
-						<h4>Отбеливающие полоски №3</h4>
-						<img class="goods-face" src="images/7FJ2EWwny6s.jpg" height="150" alt="7FJ2EWwny6s.jpg">
+						<h4>Crest 3D</br> 
+						Professional Effects</h4>
+						<h5>Цена: 3190 руб.</h5>
+						<img class="goods-face" src="images/2.jpg" height="150" alt="7FJ2EWwny6s.jpg">
 						<div class="w-embed">
 							<ul>
-								<li>описание товара 1</li>
-								<li>описание товара 2</li>
-								<li>описание товара 3</li>
-								<li>описание товара 4</li>
+								<li>длительность курса 20 дней</li>
+								<li>результаты заметны через 4-6 дней</li>
+								<li>отбеливание на 4-5 тонов</li>
+								<li>эффект отбеливания сохраняется от 12 до 18 месяцев</li>
+								<li>время использования: 30 минут, 1 раз в день</li>
 							</ul>
 						</div>
 						<a class="button" href="#">
@@ -223,14 +234,14 @@
 			<div class="w-row">
 				<div class="w-col w-col-4 good">
 						<div class="card">
-						<h4>Зубная паста №1</h4>
+						<h4>Зубная паста Crest</br> 
+						Glamorous White</h4>
+						<h5>Цена: 590 руб.</h5>
 						<img class="goods-face" src="images/6.jpg" height="150" alt="6.jpg">
 							<div class="w-embed">
 								<ul>
-									<li>описание товара 1</li>
-									<li>описание товара 2</li>
-									<li>описание товара 3</li>
-									<li>описание товара 4</li>
+									<li>отбеливающая зубная паста класса "Премиум"</li>
+									<li>удаляет до 90% пятен всего за 5 дней, делая зубы здоровыми и белоснежными!</li>
 								</ul>
 							</div>
 						<a class="button" href="#">
@@ -240,14 +251,14 @@
 
 				<div class="w-col w-col-4 good">
 					<div class="card">
-						<h4>Зубная паста №2</h4>
+						<h4>Зубная паста Crest</br> 
+						Pro-Health</h4>
+						<h5>Цена: 590 руб.</h5>
 						<img class="goods-face" src="images/5.jpg" height="150" alt="5.jpg">
 						<div class="w-embed">
 							<ul>
-								<li>описание товара 1</li>
-								<li>описание товара 2</li>
-								<li>описание товара 3</li>
-								<li>описание товара 4</li>
+								<li>зубная паста нового поколения</li>
+								<li>эффективно борется с кариесом и надолго обеспечивает свежее дыхание</li>
 							</ul>
 						</div>
 						<a class="button" href="#">
@@ -257,14 +268,15 @@
 
 				<div class="w-col w-col-4 good">
 					<div class="card">
-						<h4>Зубная паста №3</h4>
+						<h4>Зубная паста Crest</br> 
+						Sensitivity Teeth Protection</h4>
+						<h5>Цена: 590 руб.</h5>
 						<img class="goods-face" src="images/4.jpg" height="150" alt="4.jpg">
 						<div class="w-embed">
 							<ul>
-								<li>описание товара 1</li>
-								<li>описание товара 2</li>
-								<li>описание товара 3</li>
-								<li>описание товара 4</li>
+								<li>инновационная зубная паста для снижения чувствительности зубов</li>
+								<li>содержит минеральные вещества, необходимые для укрепления зубной эмали</li>
+								<li>освежает дыхание</li>
 							</ul>
 						</div>
 						<a class="button" href="#">
