--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<script type="text/javascript" src="js/webflow.js" defer></script>
 
 	</head><body>
-	<div class="w-container content">
-		<div class="up">
+	<section>
+		<div class="w-container content up">
 			<header class="w-clearfix header">
 				<img class="logo" src="images/logo.png" width="120" alt="logo.png">
 				<div class="connection">
@@ -55,7 +55,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="feedbackslide">
+	</section>
+	<section>
+		<div class="w-container content feedbackslide">
 			<div class="w-hidden-small w-hidden-tiny feedback">
 				<img class="feed-face" src="images/client2.jpg" width="200" alt="client2.jpg">
 				<h6>Алла Духова, Москва </h6>
@@ -90,33 +92,39 @@
 					<br>чувствительных зубов использовала</div><a class="feed-vk" href="#">account  vk.com</a>
 			</div>
 		</div>
-		<div>
-			<h3>Почему 513 человек уже отбелили зубы?</h3>
-			<div class="w-row">
-				<div class="w-col w-col-8 w-clearfix">
-					<div class="w-embed adv-list">
-						<ul class="advantages">
-							<li>Мы гарантируем 100 % результат отбеливания или вернем Вам деньги. После использования нашей продукции Ваши зубы станут белее на 4-6 тонов и Вы поразите окружающих своей белоснежной улыбкой!</li>
-							<br>
-							<li>Вы можете быть уверены в качестве нашей продукции. Мы работаем напрямую только с официальным поставщиком компании Crest 3D Whitestrips. Все товары, представленные на нашем сайте производятся в США и обладают всеми необходимыми сертификатами;</li>
-							<br>
-							<li>Все курсы отбеливания абсолютно безопасны для ваших зубов. Отбеливающие полоски Crest 3D Whitestrips проверены, одобрены и рекомендованы к использованию Американской Ассоциацией Стоматологов</li>
-							<br>
-							<li>Наша продукция проста и удобна в использовании. Каждая процедура длится всего 30 минут и вы отбеливать зубы в удобное для вас время (например, по пути на работу) и даже во время общения;</li>
-							<br>
-							<li>Мы работаем более трех лет и оказываем нашим клиентам профессиональные консультации на всех этапах отбеливания!</li>
-							<br>
-						</ul>
+	</section>
+	<section>
+		<div class="w-container content advantages-container">
+			<div>
+				<h3>Почему 513 человек уже отбелили зубы?</h3>
+				<div class="w-row">
+					<div class="w-col w-col-8 w-clearfix">
+						<div class="w-embed adv-list">
+							<ul class="advantages">
+								<li>Мы гарантируем 100 % результат отбеливания или вернем Вам деньги. После использования нашей продукции Ваши зубы станут белее на 4-6 тонов и Вы поразите окружающих своей белоснежной улыбкой!</li>
+								<br>
+								<li>Вы можете быть уверены в качестве нашей продукции. Мы работаем напрямую только с официальным поставщиком компании Crest 3D Whitestrips. Все товары, представленные на нашем сайте производятся в США и обладают всеми необходимыми сертификатами;</li>
+								<br>
+								<li>Все курсы отбеливания абсолютно безопасны для ваших зубов. Отбеливающие полоски Crest 3D Whitestrips проверены, одобрены и рекомендованы к использованию Американской Ассоциацией Стоматологов</li>
+								<br>
+								<li>Наша продукция проста и удобна в использовании. Каждая процедура длится всего 30 минут и вы отбеливать зубы в удобное для вас время (например, по пути на работу) и даже во время общения;</li>
+								<br>
+								<li>Мы работаем более трех лет и оказываем нашим клиентам профессиональные консультации на всех этапах отбеливания!</li>
+								<br>
+							</ul>
+						</div>
+					</div>
+					<div class="w-col w-col-4 w-clearfix group">
+						<img class="group" src="images/vkgroup.png" width="300" alt="vkgroup.png">
 					</div>
 				</div>
-				<div class="w-col w-col-4 w-clearfix group">
-					<img class="group" src="images/vkgroup.png" width="300" alt="vkgroup.png">
-				</div>
 			</div>
+			<a class="button catalog-button" href="#">
+				Хочу белоснежную улыбку!</a>
 		</div>
-		<a class="button catalog-button" href="#">
-			Хочу белоснежную улыбку!</a>
-		<div class="fears w-clearfix">
+	</section>
+	<section>
+		<div class="w-container content fears w-clearfix">
 			<h3>Пять главных страхов при отбеливании зубов</h3>
 			<div class="problem">
 				<div>- Это очень дорого!</div>
@@ -167,8 +175,9 @@
 			</div>
 
 			</div>
-
 		</div>
+	</section>
+	<div class="w-container content goods-container">
 		<div class="goods">
 			<div class="w-row">
 				<div class="w-col w-col-4 good">
