--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 		<link rel="stylesheet" type="text/css" href="css/webflow.css">
 		<link rel="stylesheet" type="text/css" href="css/whitestripes.webflow.css">
 		<link rel="icon" type="image/x-icon" href="https://y7v4p6k4.ssl.hwcdn.net/placeholder/favicon.ico">
+		<link rel="stylesheet" type="text/css" href="css/counter.css" />
 		<link href='http://fonts.googleapis.com/css?family=Scada:400italic,700italic,400,700&subset=latin,cyrillic,latin-ext' rel='stylesheet' type='text/css'>
-		<script type="text/javascript" src="js/webflow.js" defer></script>
+
+		<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+
+		<script type="text/javascript" src="js/webflow.js"></script>
+		<script type="text/javascript" src="js/flipcounter.js"></script>
 
 	</head><body>
 	<section>
@@ -96,7 +101,7 @@
 	<section>
 		<div class="w-container content advantages-container">
 			<div>
-				<h3>Почему 513 человек уже отбелили зубы?</h3>
+				<h3>Почему человек уже отбелили зубы?</h3>
 				<div class="w-row">
 					<div class="w-col w-col-8 w-clearfix">
 						<div class="w-embed adv-list">
@@ -295,5 +300,11 @@
 			</div>
 		</div>
 	</div>
+
+	<script type="text/javascript">
+	//<![CDATA[
+
+	//]]>
+	</script>
 </body>
 </html>
