--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 				<img class="logo" src="images/logo.png" width="120" alt="logo.png">
 				<div class="connection">
 					<a class="phone-link" href="callto:84957777777">+7(495)777-77-77</a>
-					<a class="button phone-button" href="#">
-							Заказать бесплатный звонок	
+					
+					<div class="button">
+						<a class="phone-button" href="#">
+								Заказать бесплатный звонок	
 						</a>
+					</div>
 				</div>
 				<h1 class="slogan"> Обрети белоснежную улыбку<br> за 7 дней!</h1>
 			</header>
@@ -39,8 +42,11 @@
 						<div class="action-text">старая цена <span class="old-price">2000</span>
 							<p class="new-price">новая цена 1500</p></div>
 					</div>
-					<a class="button" href="#">
-						Button Text</a>
+					<div class="button">
+						<a href="#">
+							Button Text
+						</a>
+					</div>
 				</div>
 			</div>
 			<div class="w-row bonuses">
@@ -124,8 +130,11 @@
 					</div>
 				</div>
 			</div>
-			<a class="button catalog-button" href="#">
-				Хочу белоснежную улыбку!</a>
+			<div class="button">
+				<a class="catalog-button" href="#">
+					Хочу белоснежную улыбку!
+				</a>
+			</div>
 		</div>
 	</section>
 	<section>
@@ -200,8 +209,11 @@
 								<li>время использования: 2 часа, 1 раз в день</li>
 							</ul>
 						</div>
-						<a class="button" href="#">
-							Button Text</a>
+						<div class="button">
+							<a href="#">
+								Button Text
+							</a>
+						</div>
 					</div>
 				</div>
 				<div class="w-col w-col-4 good">
@@ -219,9 +231,12 @@
 								<li>время использования: 30 минут, 1 раз в день</li>
 							</ul>
 						</div>
-						<a class="button" href="#">
-							Button Text</a>
+						<div class="button">
+							<a href="#">
+								Button Text
+							</a>
 						</div>
+					</div>
 				</div>
 				<div class="w-col w-col-4 good">
 					<div class="card">
@@ -238,9 +253,12 @@
 								<li>время использования: 30 минут, 1 раз в день</li>
 							</ul>
 						</div>
-						<a class="button" href="#">
-							Button Text</a>
+						<div class="button">
+							<a  href="#">
+								Button Text
+							</a>
 						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -258,9 +276,12 @@
 									<li>удаляет до 90% пятен всего за 5 дней, делая зубы здоровыми и белоснежными!</li>
 								</ul>
 							</div>
-						<a class="button" href="#">
-						 Button Text</a>
+						<div class="button">
+							<a  href="#">
+						 		Button Text
+						 	</a>
 						 </div>
+					</div>
 				</div>
 
 				<div class="w-col w-col-4 good">
@@ -275,8 +296,11 @@
 								<li>эффективно борется с кариесом и надолго обеспечивает свежее дыхание</li>
 							</ul>
 						</div>
-						<a class="button" href="#">
-							Button Text</a>
+						<div class="button">
+							<a href="#">
+								Button Text
+							</a>
+						</div>
 					</div>
 				</div>
 
@@ -293,8 +317,11 @@
 								<li>освежает дыхание</li>
 							</ul>
 						</div>
-						<a class="button" href="#">
-							Button Text</a>
+						<div class="button">
+							<a  href="#">
+								Button Text
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
