--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<div class="connection">
 					<a class="phone-link" href="callto:84957777777">+7(495)777-77-77</a>
 					
-					<div class="button">
-						<a class="phone-button" href="#">
+					<div class="phone-button button">
+						<a href="#">
 								Заказать бесплатный звонок	
 						</a>
 					</div>
@@ -51,17 +51,17 @@
 			</div>
 			<div class="w-row bonuses">
 				<div class="w-col w-col-4 w-clearfix">
-					<img class="bonus-face" src="images/guarantee.png" width="75" alt="phone%20rebel.jpg">
+					<img class="bonus-face" src="images/guarantee.png" width="100" alt="phone%20rebel.jpg">
 					<div class="guarantee">Мы гарантируем, что Ваши зубы 
 						станут белее на 4-6 тонов или
 						мы вернем вам деньги!</div>
 				</div>
 				<div class="w-col w-col-4 w-clearfix">
-					<img class="bonus-face" src="images/sertif.png" width="75" height="75" alt="sertif.png">
+					<img class="bonus-face" src="images/sertif.png" width="100" alt="sertif.png">
 					<div class="guarantee">Вся наша продукция прошла необходимую сертификацию</div>
 				</div>
 				<div class="w-col w-col-4 w-clearfix">
-					<img class="bonus-face" src="images/delivery1.png" width="75" alt="phone%20rebel.jpg">
+					<img class="bonus-face" src="images/delivery1.png" width="100" alt="phone%20rebel.jpg">
 					<div class="guarantee">Бесплатная доставка по Москве при заказе на сумму свыше 5000 рублей</div>
 				</div>
 			</div>
@@ -310,6 +310,12 @@
 		</div>
 	</section>
 
+	<footer class="footer">
+		<div class="w-container">
+			© Fedorova	
+		</div>
+		
+	</footer>
 	<script type="text/javascript">
 	//<![CDATA[
 
