--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="w-clearfix presentation">
 				<div class="action">
 					<h2>Акция!</h2>
-					<h3 class="action-head"> Crest 3D Intensive <br>Professional Effects<strong>-30%</strong></h3>
+					<h3 class="action-head"> Отбеливающие полоски<br/> Crest 3D Intensive <br>Professional Effects<strong>-30%</strong></h3>
 					<div class="actions">
 						<div class="action-text">старая цена <span class="old-price">2000</span>
 							<p class="new-price">новая цена 1500</p></div>
@@ -67,44 +67,20 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section class="feedfon">
 		<div class="w-container content feedbackslide">
 			<div class="w-hidden-small w-hidden-tiny feedback">
-				<img class="feed-face" src="images/client2.jpg" width="200" alt="client2.jpg">
-				<h6>Алла Духова, Москва </h6>
-				<div class="feed-text">Мой первый опыт отбеливания.
-					<br>Было очень много сомнений, я
-					<br>долго не решалась купить. В итоге,
-					<br>всё-таки попробовала и совсем не
-					<br>жалею! Результат заметили все, я
-					<br>даже не ожидала такого эффекта.
-					<br>Теперь все рекомендую!</div><a class="feed-vk" href="#">account  vk.com</a>
+				<img class="feed-face" src="images/feedback/small/feedsample1.jpg" alt="client2.jpg">
 			</div>
 			<div class="feedback">
-				<img class="feed-face" src="images/client2.jpg" width="200" alt="client2.jpg">
-				<h6>Ольга Берггольц, Санкт-Петербург</h6>
-				<div class="feed-text">Раньше уже отбеливала в клинике,
-					<br>результат в принципе радовал, чего
-					<br>не скажешь о цене. Поэтому когда
-					<br>услышала о полосках - сначала
-					<br>не поверила, что может быть такой
-					<br>же результат, но гораздо дешевле.
-					<br>А именно так и получилось))</div><a class="feed-vk" href="#">account  vk.com</a>
+				<img class="feed-face" src="images/feedback/small/feedsample2.jpg" alt="client2.jpg">
 			</div>
 			<div class="w-hidden-small w-hidden-tiny feedback">
-				<img class="feed-face" src="images/client2.jpg" width="200" alt="client2.jpg">
-				<h6>Джейн Остин, Стивентон </h6>
-				<div class="feed-text">Мне посоветовала полоски подруга.
-					<br>Сама бы я не решилась - у меня
-					<br>чувствительные дёсны+ я аллергик.
-					<br>Всё-таки подруга меня уговорила,
-					<br>и правильно сделала) Всё получилось
-					<br>оч хорошо, правда я ещё и пасту для
-					<br>чувствительных зубов использовала</div><a class="feed-vk" href="#">account  vk.com</a>
+				<img class="feed-face" src="images/feedback/small/feedsample3.jpg" alt="client2.jpg">
 			</div>
 		</div>
 	</section>
-	<section>
+	<section class="why513">
 		<div class="w-container content advantages-container">
 			<div>
 				<h3>Почему человек уже отбелили зубы?</h3>
@@ -191,7 +167,8 @@
 			</div>
 		</div>
 	</section>
-	<div class="w-container content goods-container">
+	<section class="allgoods">
+		<div class="w-container content goods-container">
 		<div class="goods">
 			<div class="w-row">
 				<div class="w-col w-col-4 good">
@@ -205,13 +182,14 @@
 								<li>длительность курса 7 дней</li>
 								<li>результаты заметны после первого применения</li>
 								<li>отбеливание на 5-6 тонов</li>
-								<li>эффект отбеливания сохраняется от 12 до 18 месяцев</li>
+								<li>эффект отбеливания сохраняется от 12<br/>
+								 до 18 месяцев</li>
 								<li>время использования: 2 часа, 1 раз в день</li>
 							</ul>
 						</div>
 						<div class="button">
 							<a href="#">
-								Button Text
+								Заказать сейчас
 							</a>
 						</div>
 					</div>
@@ -233,7 +211,7 @@
 						</div>
 						<div class="button">
 							<a href="#">
-								Button Text
+								Заказать сейчас
 							</a>
 						</div>
 					</div>
@@ -249,13 +227,15 @@
 								<li>длительность курса 20 дней</li>
 								<li>результаты заметны через 4-6 дней</li>
 								<li>отбеливание на 4-5 тонов</li>
-								<li>эффект отбеливания сохраняется от 12 до 18 месяцев</li>
+								<li>эффект отбеливания сохраняется от 12<br/>
+								 до 18 месяцев</li>
 								<li>время использования: 30 минут, 1 раз в день</li>
 							</ul>
 						</div>
 						<div class="button">
 							<a  href="#">
-								Button Text
+								Заказать сейчас
+
 							</a>
 						</div>
 					</div>
@@ -273,12 +253,13 @@
 							<div class="w-embed">
 								<ul>
 									<li>отбеливающая зубная паста класса "Премиум"</li>
-									<li>удаляет до 90% пятен всего за 5 дней, делая зубы здоровыми и белоснежными!</li>
+									<li>удаляет до 90% пятен всего за 5 дней,<br/>
+									 делая зубы здоровыми и белоснежными!</li>
 								</ul>
 							</div>
 						<div class="button">
 							<a  href="#">
-						 		Button Text
+						 		Заказать сейчас
 						 	</a>
 						 </div>
 					</div>
@@ -298,7 +279,7 @@
 						</div>
 						<div class="button">
 							<a href="#">
-								Button Text
+								Заказать сейчас
 							</a>
 						</div>
 					</div>
@@ -319,14 +300,15 @@
 						</div>
 						<div class="button">
 							<a  href="#">
-								Button Text
+								Заказать сейчас
 							</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+		</div>
+	</section>
 
 	<script type="text/javascript">
 	//<![CDATA[
