Added phone icon

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 					
 					<div class="phone-button button">
 						<a href="#">
+							<img src="images/buttons/phone.png" width="30" style="
+							    display: inline; ">
 								Заказать бесплатный звонок	
 						</a>
 					</div>
