--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 					
 					<div class="phone-button button">
 						<a href="#">
-							<img src="images/buttons/phone.png" width="30" style="
-							    display: inline; ">
+							<img src="images/buttons/phone.png" width="30">
 								Заказать бесплатный звонок	
 						</a>
 					</div>
@@ -191,6 +190,8 @@
 						</div>
 						<div class="button">
 							<a href="#">
+								<img src="images/buttons/cart.png" width="30">
+
 								Заказать сейчас
 							</a>
 						</div>
@@ -213,6 +214,8 @@
 						</div>
 						<div class="button">
 							<a href="#">
+								<img src="images/buttons/cart.png" width="30">
+
 								Заказать сейчас
 							</a>
 						</div>
@@ -236,6 +239,8 @@
 						</div>
 						<div class="button">
 							<a  href="#">
+								<img src="images/buttons/cart.png" width="30">
+
 								Заказать сейчас
 
 							</a>
@@ -261,6 +266,8 @@
 							</div>
 						<div class="button">
 							<a  href="#">
+								<img src="images/buttons/cart.png" width="30">
+
 						 		Заказать сейчас
 						 	</a>
 						 </div>
@@ -281,6 +288,8 @@
 						</div>
 						<div class="button">
 							<a href="#">
+								<img src="images/buttons/cart.png" width="30">
+
 								Заказать сейчас
 							</a>
 						</div>
@@ -302,6 +311,8 @@
 						</div>
 						<div class="button">
 							<a  href="#">
+								<img src="images/buttons/cart.png" width="30">
+
 								Заказать сейчас
 							</a>
 						</div>
