--- a/index-2.html
+++ b/index-2.html
@@ -49,7 +49,7 @@
 					</div>
 					<div class="button">
 						<a href="#">
-							Button Text
+							Участвовать в акции
 						</a>
 					</div>
 				</div>
@@ -88,7 +88,7 @@
 	<section class="why513">
 		<div class="w-container content advantages-container">
 			<div>
-				<h3>Почему человек уже отбелили зубы?</h3>
+				<h3>Почему уже 513 человек отбелили зубы вместе с нами?</h3>
 				<div class="w-row">
 					<div class="w-col w-col-8 w-clearfix">
 						<div class="w-embed adv-list">
@@ -317,7 +317,10 @@
 
 	<footer class="footer">
 		<div class="w-container">
-			© Fedorova	
+			© здесь может и даже должна находиться информация о копирайте<br/>
+			также можно укзать год создания<br/>
+			если есть, допустим, ИНН<br/>
+			и ещё раз телефон для связи<br/>
 		</div>
 		
 	</footer>
