--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<header class="w-clearfix header">
 				<img class="logo" src="images/logo.png" width="120" alt="logo.png">
 				<div class="connection">
-					<a class="phone-link" href="callto:84957777777">+7(495)777-77-77</a>
+					<a class="phone-link" href="callto:84957777777">+7(499)409-24-92</a>
 					
 					<div class="phone-button button">
 						<a href="#">
@@ -37,11 +37,12 @@
 			</header>
 			<div class="w-clearfix presentation">
 				<div class="action">
-					<h2>Акция!</h2>
-					<h3 class="action-head"> Отбеливающие полоски<br/> Crest 3D Intensive <br>Professional Effects<strong>-30%</strong></h3>
+					<h3>Акция!</h3>
+					<h4 class="action-head"> Отбеливающие полоски<br/> 
+					<span class="accent">Crest 3D Intensive <br>Professional Effects<strong>-30%</strong></span></h4>
 					<div class="actions">
-						<div class="action-text">старая цена <span class="old-price">2000</span>
-							<p class="new-price">новая цена 1500</p></div>
+						<div class="action-text">старая цена: <span class="old-price">2000 руб.</span>
+							<p class="new-price">новая цена: 1500 руб.</p></div>
 					</div>
 					<div class="button">
 						<a href="#">
@@ -118,49 +119,49 @@
 		<div class="w-container content fears w-clearfix">
 			<h3>Пять главных страхов при отбеливании зубов</h3>
 			<div class="problem">
-				<div>- Это очень дорого!</div>
+				<div><img src="images/exclamation.png"> Это очень дорого!</div>
 			</div>
 			<div class="solution">
 				<div>Комплект отбеливающих полосок Crest 3D Whitestrips стоит намного дешевле, чем отбеливание в стоматологической клинике. Вы экономите до 15 тыс. руб., но в итоге получаете точно такой же результат, так как в состав отбеливающих полосок входят те же самые компоненты, что и в средства для профессионального отбеливания в клиниках.</div>
 			</div>
 			<div class="problem">
-				<div>- Боюсь, что не получу желаемого результата</div>
+				<div><img src="images/exclamation.png"> Боюсь, что не получу желаемого результата</div>
 			</div>
 			<div class="solution">
 				<div>После использования отбеливающих полосок Crest 3D Whitestrips, мы гарантируем, что ваши зубы станут белее на 4-6 тонов, или мы вернем Вам деньги!</div>
 			</div>
 			<div class="problem">
-				<div>- Повысится чувствительность зубов</div>
+				<div><img src="images/exclamation.png"> Повысится чувствительность зубов</div>
 			</div>
 			<div class="solution">
 				<div>Некоторые люди могут испытывать повышение чувствительности зубов во время использования полосок Crest 3D Whitestrips. Повышенная чувствительность проходит после окончания курса и не является опасной, при повышении чувствительности Вы можете сделать перерыв в 1-2 дня, а также использовать пасту для чувствительных зубов Crest Sensitivity, понижающую чувствительность на 50%.</div>
 			</div>
 			<div class="problem">
-				<div>- Отбеливание вредит эмали зубов</div>
+				<div><img src="images/exclamation.png"> Отбеливание вредит эмали зубов</div>
 			</div>
 			<div class="solution">
 				<div>Использование отбеливающих полосок Crest 3D Whitestrips абсолютно безопасно для эмали зубов. Независимое исследование компании Kelton Research доказало безопасность и эффективность Crest Whitestrips. Система отбеливания Crest 3D White признана брендом #1 в мире, который советуют использовать в домашних условиях профессиональные стоматологи.</div>
 			</div>
 
 			<div class="problem">
-				<div>- Процесс отбеливания занимает много времени</div>
+				<div><img src="images/exclamation.png"> Процесс отбеливания занимает много времени</div>
 			</div>
 			<div class="solution">
 				<div>Отбеливающие полоски Crest 3D Whitestrips очень просты и удобны в использовании. 
 					
 					</div>
 
-				<div class="w-row">
+				<div class="w-row steps">
 				<div class="w-col w-col-4 good">
-					<h4>Шаг 1</h4>Снимите защитное покрытие с полоски.
+					<h4 class="step">Шаг 1</h4>Снимите защитное покрытие с полоски.
 					<img class="goods-face" src="images/3steps/1_over.jpg" alt="1step">
 				</div>
 				<div class="w-col w-col-4 good">
-					<h4>Шаг 2</h4>Встаньте перед зеркалом и приложите полоску гелевой стороной к зубам, затем выровняйте ее по линии десен и плотно прижмите.
+					<h4 class="step">Шаг 2</h4>Встаньте перед зеркалом и приложите полоску гелевой стороной к зубам, затем выровняйте ее по линии десен и плотно прижмите.
 					<img class="goods-face" src="images/3steps/2_over.jpg" alt="2.jpg">
 				</div>
 				<div class="w-col w-col-4 good">
-					<h4>Шаг 3</h4>Для лучшего отбеливания загните выступающие края полоски. Удалите полоски через 30 минут или 2 часа в зависимости от системы отбеливания и аккуратно почистите зубы.
+					<h4 class="step">Шаг 3</h4>Для лучшего отбеливания загните выступающие края полоски. Удалите полоски через 30 минут или 2 часа в зависимости от системы отбеливания и аккуратно почистите зубы.
 					<img class="goods-face" src="images/3steps/3_over.jpg" alt="7FJ2EWwny6s.jpg">
 				</div>
 			</div>
