--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 	<section>
 		<div class="w-container content up">
 			<header class="w-clearfix header">
-				<img class="logo" src="images/logo.png" width="120" alt="logo.png">
+				<img class="logo" src="images/guarantee.png" width="120" alt="logo.jpg">
 				<div class="connection">
-					<a class="phone-link" href="callto:84957777777">+7(499)409-24-92</a>
-					
+					<a class="phone-link" href="callto:84994092492">+7(499)409-24-92</a>
+					<br/>
+					<a class="phone-link" href="callto:89166149760">+7(916)614-97-60</a>
+
 					<div class="phone-button button">
 						<a href="#">
 							<img src="images/buttons/phone.png" width="30">
@@ -40,9 +42,11 @@
 					<h3>Акция!</h3>
 					<h4 class="action-head"> Отбеливающие полоски<br/> 
 					<span class="accent">Crest 3D Intensive <br>Professional Effects<strong>-30%</strong></span></h4>
-					<div class="actions">
-						<div class="action-text">старая цена: <span class="old-price">2000 руб.</span>
-							<p class="new-price">новая цена: 1500 руб.</p></div>
+					<img class="action-trigger" src="images/1.jpg" height="110" alt="3.jpg">
+
+					<div class="actions w-clearfix">
+						<div class="action-text">старая цена: <p class="old-price">4650 руб.</p>
+							<p class="new-price">новая цена: </p><p class="new-price">3250 руб.</p></div>
 					</div>
 					<div class="button">
 						<a href="#">
@@ -86,7 +90,7 @@
 		<div class="w-container content advantages-container">
 			<div>
 				<h3>Почему уже 513 человек отбелили зубы вместе с нами?</h3>
-				<div class="w-row">
+				<div class="w-row ">
 					<div class="w-col w-col-8 w-clearfix">
 						<div class="w-embed adv-list">
 							<ul class="advantages">
@@ -108,8 +112,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="button">
-				<a class="catalog-button" href="#">
+			<div class="button catalog-button">
+				<a href="#">
 					Хочу белоснежную улыбку!
 				</a>
 			</div>
@@ -178,7 +182,7 @@
 						<h4>Crest 3D Intensive</br>
 						Professional Effects</h4>
 						<h5>Цена: 3250 руб.</h5>
-						<img class="goods-face" src="images/7FJ2EWwny6s.jpg" height="150" alt="3.jpg">
+						<img class="goods-face" src="images/1.jpg" height="150" alt="3.jpg">
 						<div class="w-embed">
 							<ul>
 								<li>длительность курса 7 дней</li>
@@ -326,12 +330,29 @@
 
 	<footer class="footer">
 		<div class="w-container">
-			© здесь может и даже должна находиться информация о копирайте<br/>
-			также можно укзать год создания<br/>
-			если есть, допустим, ИНН<br/>
-			и ещё раз телефон для связи<br/>	
-		</div>
 		
+			<div class="w-row">
+				<div class="w-col w-col-4">
+					© здесь может и даже должна находиться информация о копирайте<br/>
+					также можно укзать год создания<br/>
+					если есть, допустим, ИНН<br/>
+					и ещё раз телефон для связи<br/>
+				</div>
+
+				<div class="w-col w-col-4">
+					<div class="back-call button">
+						<a  href="#">
+							<img src="images/buttons/phone.png" width="30">
+							заказать обратный звонок
+						</a>
+					</div>
+				</div>
+				<div class="w-col w-col-4">
+					Остались вопросы? Звоните - поможем!
+					+7(499)409-24-92
+				</div>
+			</div>
+		</div>
 	</footer>
 	<script type="text/javascript">
 	//<![CDATA[
